--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -487,7 +487,7 @@ async function init() {
             const ticker = stock.ticker;
             seriesData[ticker] = stock.dates.map((date, index) => ({
                 date,
-                price: stock.last_50_closes[index]
+                price: stock.period_closes[index]
             }));
 
             // Collect all unique dates
