--- a/templates/visualization.html
+++ b/templates/visualization.html
@@ -169,7 +169,8 @@
                                                 <div class="legend-item" id="legend-max" style="background-color: darkgreen;"></div>
                                             </div>
                                             <div class="toolbar">
-                                                <button id="one_month" onclick="fetchStockPerformance('2day')" class="btn btn-sm btn-light">1D</button>
+                                                <button id="one_month" onclick="fetchStockPerformance('1day')" class="btn btn-sm btn-light">1D</button>
+                                                <button id="one_week" onclick="fetchStockPerformance('1week')" class="btn btn-sm btn-light">1W</button>
                                                 <button id="one_month" onclick="fetchStockPerformance('1month')" class="btn btn-sm btn-light">1M</button>
                                                 <button id="six_months" onclick="fetchStockPerformance('6months')" class="btn btn-sm btn-light">6M</button>
                                                 <button id="one_year" onclick="fetchStockPerformance('1year')" class="btn btn-sm btn-light active">1Y</button>
