--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -119,22 +119,14 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody id="heatmap"></tbody>
+                                            </table>
+                                            <table class="table table-bordered">
                                                 <thead>
                                                     <th>-</th>
-                                                    <th>Total Current Cash</th>
-                                                    <th>Profit</th>
-                                                    <th>Percentage Change</th>
+                                                    <th>Cash Outside Market</th>
                                                     <th>Total Cash Invested</th>
-                                                    <th>Weight in Portfolio</th>
                                                 </thead>
-                                                <td>Cashflow</td>
-                                                <td><input type="number" class="form-control" name="cashflow_number" value="" onchange="updateHeatmapData('${userId}', 'cashflow')"></td>
-                                                <td><input type="text" class="form-control" name="${ticker}_current_price" value="20" readonly></td>
-                                                <td><input type="text" class="form-control" name="${ticker}_percentage_diff" value="" readonly></td>
-                                                <td><input type="text" class="form-control" name="${ticker}_total_cash" value="" readonly></td>
-                                                <td><input type="text" class="form-control" name="${ticker}_weight" value="" readonly></td>      
-                                                <td><button type="button" class="btn btn-secondary" onclick="openAddCashModal('cashflow')">Add</button></td>
-                                                <td><button type="button" class="btn btn-danger" onclick="openAddCashModal('cashflow')">Pull</button></td>              
+                                                <tbody id="cashflowtb"></tbody>
                                             </table>
                                             <button type="button" class="btn btn-primary" onclick="submitHeatmapData()">Submit</button>
                                             </div> <!-- end preview-->
@@ -401,12 +393,22 @@
                 fetch(`/heatmap_data/${userId}`)
                     .then(response => response.json())
                     .then(data => {
-                        heatmapData = data; // Initialize heatmapData with the fetched data
-            
+                        heatmapData = data['ticker_data']; // Initialize heatmapData with the fetched data
+                        cashflow = data['cash_flow'];
+                        const history = data['history']
                         const heatmapContainer = document.getElementById('heatmap-container');
                         const heatmap = document.getElementById('heatmap');
+                        const cashflowtb = document.getElementById('cashflowtb');
+                        cashflowtb.innerHTML= '';
                         heatmap.innerHTML = ''; // Clear previous heatmap
-            
+                        let totalCashInMarket = parseFloat(cashflow);
+                        // Iterate through each ticker and sum up total_cash_in_market values
+                        Object.values(heatmapData).forEach(tickerEntries => {
+                            tickerEntries.forEach(entry => {
+                                totalCashInMarket += parseFloat(entry.total_cash_in_market);
+                            });
+                        });
+
                         tickers.forEach(ticker => {
                             let tickerData = heatmapData[ticker] || []; // Ensure tickerData is always an array
                             if (!Array.isArray(tickerData)) {
@@ -419,8 +421,8 @@
                                 const row = document.createElement('tr');
                                 row.innerHTML = `
                                     <td>${ticker}</td>
-                                    <td><input type="number" class="form-control" name="${ticker}_number" value="" onchange="updateHeatmapData('${userId}', '${ticker}')"></td>
-                                    <td><input type="number" step="0.01" class="form-control" name="${ticker}_price" value="" onchange="updateHeatmapData('${userId}', '${ticker}')"></td>
+                                    <td><input type="number" class="form-control" name="${ticker}_number" value=""></td>
+                                    <td><input type="number" step="0.01" class="form-control" name="${ticker}_price" value=""></td>
                                     <td><input type="text" class="form-control" name="${ticker}_current_price" value="" readonly></td>
                                     <td><input type="text" class="form-control" name="${ticker}_percentage_diff" value="" readonly></td>
                                     <td><input type="text" class="form-control" name="${ticker}_total_cash" value="" readonly></td>
@@ -437,8 +439,8 @@
                                     const row = document.createElement('tr');
                                     row.innerHTML = `
                                         <td>${ticker}</td>
-                                        <td><input type="number" class="form-control" name="${ticker}_number" value="${entry.number_of_stocks || ''}" onchange="updateHeatmapData('${userId}', '${ticker}')"></td>
-                                        <td><input type="number" step="0.01" class="form-control" name="${ticker}_price" value="${entry.purchase_price || ''}" onchange="updateHeatmapData('${userId}', '${ticker}')"></td>
+                                        <td><input type="number" class="form-control" name="${ticker}_number" value="${entry.number_of_stocks || ''}"></td>
+                                        <td><input type="number" step="0.01" class="form-control" name="${ticker}_price" value="${entry.purchase_price || ''}"></td>
                                         <td><input type="text" class="form-control" name="${ticker}_current_price" value="${currentPrice}" readonly></td>
                                         <td><input type="text" class="form-control" name="${ticker}_percentage_diff" value="${percentageDiff}" readonly></td>
                                         <td><input type="text" class="form-control" name="${ticker}_total_cash" value="${index === 0 ? `$${entry.total_cash_in_market.toFixed(2)}` : ''}" readonly></td>
@@ -450,8 +452,15 @@
                                 });
                             }
                         });
-            
-                        heatmapContainer.style.display = 'block';
+                        const cashrow = document.createElement('tr');
+                                cashrow.innerHTML = `
+                                    <td>Cashflow</td>
+                                    <td><input type="number" class="form-control" name="cashflow_number" value="${cashflow}"></td>
+                                    <td><input type="text" class="form-control" name="cashflow_current_price" value="${totalCashInMarket}" readonly></td>
+                                    <td><button type="button" class="btn btn-secondary" onclick="openAddCashModal('cashflow')">Add</button></td>
+                                    <td><button type="button" class="btn btn-danger" onclick="openAddCashModal('cashflow')">Pull</button></td>              
+                                `;
+                        cashflowtb.appendChild(cashrow);
                     })
             .catch(error => console.error('Error loading heatmap:', error));
     }
@@ -533,49 +542,29 @@
         $('#sellStockModal').modal('hide');
     });
     
-        // Add event listener to the form
     document.getElementById('addCashForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-        const ticker = "cashflow";
-        const operation = document.getElementById('operation').value;
-        const moneyamount = parseFloat(document.getElementById('moneyamount').value);
-        changeMoney(ticker ,operation, moneyamount);
-        console.log("pulling",moneyamount)
-        // Close the modal
-        $('#addCashModal').modal('hide');
-    });
+    event.preventDefault();
+    const ticker = "cashflow";
+    const operation = document.getElementById('operation').value;
+    const moneyamount = parseFloat(document.getElementById('moneyamount').value);
+    const cashflowInput = document.getElementsByName('cashflow_number')[0];
 
-        // Function to handle adding and pulling money
-        function changeMoney(ticker, operation, moneyamount) {
-        if (heatmapData['cashflow']) {
-            const entry = heatmapData['cashflow'][0];
-            console.log(entry)
-            if(operation == 'pull'){
-                entry.purchase_price -= moneyamount;
-                entry.current_price -= moneyamount;
-                entry.percentage_diff = (((entry.current_price)-entry.purchase_price)/entry.purchase_price)
-            }else{
-                entry.purchase_price += moneyamount;
-                entry.current_price += moneyamount;
-                entry.percentage_diff = (((entry.current_price)-entry.purchase_price)/entry.purchase_price)
-            }
-            // Update the table
-            loadHeatmap(document.getElementById('user_id').value, Object.keys(heatmapData));
-            // Send the updated data to the server
-            fetch(`/heatmap_data/${document.getElementById('user_id').value}/${ticker}`, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(heatmapData[ticker])
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Data updated successfully!');
-            })
-            .catch(error => console.error('Error updating data:', error));
-        }
+    // Get the current cash flow value and convert it to a number
+    let currentCashflow = parseFloat(cashflowInput.value) || 0;
+
+    if (operation === 'pull') {
+        currentCashflow -= moneyamount;
+    } else if (operation === 'add') {
+        currentCashflow += moneyamount;
     }
+
+    // Update the cashflow input value
+    cashflowInput.value = currentCashflow.toFixed(2);
+    console.log(operation === 'pull' ? "pulling" : "adding", moneyamount);
+    // Close the modal
+    $('#addCashModal').modal('hide');
+});
+
 
     // Function to handle selling stocks
     function sellStock(ticker, sharesToSell) {
@@ -623,27 +612,6 @@
     }
     
     
-            function updateHeatmapData(userId, ticker) {
-                const numberOfStocks = document.querySelector(`input[name="${ticker}_number"]`).value;
-                const purchasePrice = document.querySelector(`input[name="${ticker}_price"]`).value;
-    
-                fetch(`/heatmap_data/${userId}/${ticker}`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({
-                        number_of_stocks: numberOfStocks,
-                        purchase_price: purchasePrice
-                    })
-                })
-                .then(response => response.json())
-                .then(data => {
-                    console.log('Data updated successfully!');
-                })
-                .catch(error => console.error('Error updating data:', error));
-            }
-    
             function submitHeatmapData() {
                 const userId = document.getElementById('user_id').value;
                 const rows = document.querySelectorAll('#heatmap tr');
@@ -662,13 +630,17 @@
                         purchase_price: parseFloat(purchasePrice) || 0.0
                     });
                 });
-    
+                const cashflowInput = document.getElementsByName('cashflow_number')[0];
                 fetch(`/heatmap_data/${userId}`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
                     },
-                    body: JSON.stringify(tickerData)
+                    body: JSON.stringify({
+                        ticker_data: tickerData,
+                        cash_flow: parseFloat(cashflowInput.value), // Assuming you have an input field for cash flow
+                        history:history
+                    })
                 })
                 .then(response => response.json())
                 .then(data => {
