--- a/templates/heatmap.html
+++ b/templates/heatmap.html
@@ -106,7 +106,7 @@
                                             </div>
                                         </form>
                                     </br>
-                                            <table class="table table-bordered">
+                                            <table class="table table-centered mb-0">
                                                 <thead>
                                                     <tr>
                                                         <th>Ticker</th>
@@ -120,7 +120,7 @@
                                                 </thead>
                                                 <tbody id="heatmap"></tbody>
                                             </table>
-                                            <table class="table table-bordered">
+                                            <table class="table table-centered mb-0">
                                                 <thead>
                                                     <th>-</th>
                                                     <th>Cash Outside Market</th>
